fix overflow responsive on different screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,8 +104,7 @@ nav span:hover {
 .dropdown-content {
   display: none;
   position: absolute;
-  min-width: 160px;
-  z-index: 1;
+  min-width: 160px;  
 }
 
 .dropdown:hover .dropdown-content {
